refactor(apigateway): routes for routes -> maps
